--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-<style>body {
+<style>
+body {
     margin: 0 auto;
     font-family: 'PT Sans', sans-serif;
     background-color: rgb(248, 248, 248);
@@ -425,4 +426,5 @@ ul {
 
 .my-float{
     margin-top: 7px;
-}</style>
+}
+</style>
