--- a/style.css
+++ b/style.css
@@ -32,7 +32,11 @@ ul {
 }
 
 .header-2 {
-
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 200px;
+    padding: 10px;
 }
 
 .header-3 {
