--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
     margin: 0 auto;
     font-family: 'PT Sans', sans-serif;
-    background-color: rgb(248, 248, 248);
+    background-color: rgb(211, 211, 211);
 }
 
 * {
@@ -23,7 +23,7 @@ ul {
     max-width: 600px;
     margin: 0 auto;
     padding: 0 10px;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(209, 209, 209);
 }
 
 /*HEADER*/
@@ -45,6 +45,9 @@ ul {
     display: block;
     width: 200px;
     padding: 10px;
-    align-items: flex-end;
+    align-self: flex-end;
+    float: right;
 }
+
+
 </style>
