--- a/diana.css
+++ b/diana.css
@@ -298,10 +298,8 @@ padding: 10px;
 position: absolute;
 bottom: 0;
 width: 100%;
-text-align:left;
+text-align:center;
 }
-
-
 
 /*Membuat TimeLine*/
 .timeline{
